@@ -268,6 +268,10 @@ Working version
 - #12446: remove the hooks machinery around channel locking in runtimee/io.c
   (Gabriel Scherer, review by Xavier Leroy)
 
+- #12509: Use strict prototypes on primitives when generating a standalone
+  bytecode executable (`ocamlc -custom`).
+  (Antonin Décimo, review by Xavier Leroy)
+
 ### Build system:
 
 - #12198, #12321: continue the merge of the sub-makefiles into the root Makefile
